--- a/css/ex1.css
+++ b/css/ex1.css
@@ -1,9 +1,9 @@
 body {
     width: 800px;
-    background: #bd001f url('../images/body_bg.gif') repeat-x top;
+    background: #3a8dec url('../images/body_bg.gif') repeat-x top;
     font-family: Microsoft JhengHei;
     font-size: 1em;
-    color: #333;
+    color: rgb(36, 72, 78);
     margin: 0px auto;
     margin-top: 50px;
     padding: 50px;
