--- a/coffee/styles.css
+++ b/coffee/styles.css
@@ -1,31 +1,79 @@
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+.panel {
+    bottom: 0;
+    min-height: 100vh;
+    left: 0;
+    right: 0;
+    position: sticky;
 }
 
-#bg {
-    background-size: contain;
+.panel:nth-child(1) {
+    z-index: 5;
+}
+
+.panel:nth-child(2) {
+    z-index: 4;
+}
+
+.panel:nth-child(3) {
+    z-index: 3;
+}
+
+.panel:nth-child(4) {
+    z-index: 2;
+}
+.panel:nth-child(5) {
+    z-index: 1;
+}
+
+.info,
+.panel {
+    background-color: #03121b;
+}
+
+.panel {
     background-position: center;
     background-repeat: no-repeat;
-    background-image: url("CounterPic.jpeg");
-    background-attachment: fixed;
-    color: rgb(165, 136, 77);
+    background-size: 90%;
+    color: rgba(52, 83, 97, 0.9);
+}
+
+.panel:nth-child(1) {
+    background-image: url("img/CounterPic.jpeg");
+}
+
+.panel:nth-child(2) {
+    background-image: url("img/Food.jpg");
+}
+
+.panel:nth-child(3) {
+    background-image: url("img/Drink.jpg");
+}
+
+.panel:nth-child(4) {
+    background-image: url("img/WallDoor.JPG");
+}
+
+.panel:nth-child(5) {
+    background-image: url("img/Window.jpg");
+}
+
+.panel-content {
+    align-content: center;
+    background: rgba(132, 119, 91, 0.516);
+    display: flex;
+    flex-wrap: wrap;
+    height: 100%;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.navbar {
+    background: linear-gradient(to right, rgb(241, 234, 219), white)
 }
 
 img {
-    opacity: 1;
-}
+    width: 23%;
 
-#shadow {
-    box-shadow: 5px 7px rgba(0, 0, 0, .25), 0 3px 10px 5px rgba(0, 0, 0, 0.05) !important;
-}
-
-#panel {
-    border-style: solid dashed;
-    border-width: 7px 10px;
-    margin-bottom: 100px;
-}
-.panel.fst{
-    margin-bottom: 0px;
 }
